package game;

// import "CORE/NET/serverdef.proto";

message WindowSettings {
  bool fullscreen = 1;
  int32 width = 2;
  int32 height = 3;
  bool lock_cursor = 4;
  bool hide_cursor = 5;
}

message Settings {
  message ServerDef {
    string hostname = 1;
    int32 hostport = 2;
    int32 timeout_sec = 3;
  }

  WindowSettings window_settings = 1;
  ServerDef login_server = 2;
  ServerDef game_server = 3;
  string data_dir = 4;
}
